[tool.poetry]
name = "json_source_map"
version = "0.1.0"
description = ""
authors = ["David Andersson <nderssonpublic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
